--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':FtcRobotController', ':RobotCore', ':FtcCommon', ':Hardware', ':Inspection', ':OpenFTC', ':DogeCV', ':openCVLibrary320'
+include ':FtcRobotController', ':RobotCore', ':FtcCommon', ':Hardware', ':Inspection', ':OpenFTC', ':DogeCV', ':openCVLibrary320', ':DogeLogger'
 include ':TeamCode'
