--- a/DogeCV/build.gradle
+++ b/DogeCV/build.gradle
@@ -23,4 +23,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(path: ':openCVLibrary320')
+    compile project(path: ':DogeLogger')
 }
